[gd_scene load_steps=2 format=3 uid="uid://2661wrpn6b7t"]

[ext_resource type="Script" path="res://game_objects/Interface/BattleSimulator/BattleSimulator.gd" id="1_uv4fx"]

[node name="BattleSimulator" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uv4fx")

[node name="BackgroundButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="BackgroundButton" type="Button" parent="BackgroundButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = -73.5
offset_right = 94.0
offset_bottom = 73.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="BattleContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer3/BattleContainer"]
layout_mode = 2
text = "Battle!"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer3/BattleContainer"]
layout_mode = 2

[node name="PlayerLabel" type="Label" parent="PanelContainer/VBoxContainer3/BattleContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Allied forces
"

[node name="EnemyLabel" type="Label" parent="PanelContainer/VBoxContainer3/BattleContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Eney forces"

[node name="BattleButton" type="Button" parent="PanelContainer/VBoxContainer3/BattleContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Commence battle"

[node name="ResultContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2

[node name="ResultLabel" type="Label" parent="PanelContainer/VBoxContainer3/ResultContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Battle results"

[node name="ExitButton" type="Button" parent="PanelContainer/VBoxContainer3/ResultContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Finish
"

[connection signal="pressed" from="BackgroundButton" to="." method="_on_background_button_pressed"]
[connection signal="pressed" from="BackgroundButton/BackgroundButton" to="." method="_on_background_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer3/BattleContainer/BattleButton" to="." method="_on_battle_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer3/ResultContainer/ExitButton" to="." method="_on_exit_button_pressed"]
